--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -149,6 +149,7 @@
   .hero-container {
     padding-top: 100px;
     padding-bottom: 100px;
+    max-width: 1280px;
   }
   .hero {
     width: 1150px;
